--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,29 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* Calendar date range picker - black and grey colors */
+@layer components {
+  /* Selected dates (start/end) - black background with white text */
+  button[data-selected-single="true"],
+  button[data-range-start="true"],
+  button[data-range-end="true"],
+  .rdp-day_selected,
+  .rdp-day_range_start,
+  .rdp-day_range_end {
+    background-color: black !important;
+    color: white !important;
+  }
+
+  /* Range middle dates - grey background with black text */
+  button[data-range-middle="true"],
+  .rdp-day_range_middle {
+    background-color: rgb(243 244 246) !important; /* gray-100 */
+    color: black !important;
+  }
+
+  /* Today indicator - grey background */
+  .rdp-day_today:not([data-selected="true"]):not(.rdp-day_selected) {
+    background-color: rgb(243 244 246) !important; /* gray-100 */
+  }
+}
